--- a/app/design/adminhtml/magento_backend/css/debug.css
+++ b/app/design/adminhtml/magento_backend/css/debug.css
@@ -422,6 +422,16 @@ ul.messages li.success-msg li:before {
     text-align: right;
 }
 
+.accordion .config .value .label {
+    padding: 6px 5px 0 15px;
+    vertical-align: top;
+    width: auto;
+}
+
+.accordion .config .value .label:first-child {
+    padding-left: 0;
+}
+
 .accordion .config .label label {
     padding-top: 6px;
 }
@@ -450,6 +460,10 @@ ul.messages li.success-msg li:before {
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+
+.accordion .config input.input-file {
+    margin-top: 4px;
 }
 
 .accordion .config select.select-date {
@@ -510,11 +524,11 @@ ul.messages li.success-msg li:before {
     margin:0;
 }
 
-
-
 .accordion .config .scope-label {
     color: #999;
     font-size: 12px;
+    letter-spacing: 0.05em;
+    padding: 15px 15px 0 0;
 }
 
 .accordion .config .note {
